@@ -33,7 +33,7 @@ snapshot and thus might not apply to your version.
 Copyright & Licencing
 ---------------------
 
-DOMjudge is Copyright (c) 2004 - 2010 by The DOMjudge Developers.
+DOMjudge is Copyright (c) 2004 - 2011 by The DOMjudge Developers.
 The DOMjudge developers are Thijs Kinkhorst, Peter van de Werken and
 Jaap Eldering. It was developed at Study Association "A-Eskwadraat",
 Utrecht University, The Netherlands.
