@@ -85,7 +85,7 @@ Jaap Eldering at Study Association <htmlurl name="A-Eskwadraat"
 url="http://www.a-eskwadraat.nl/">, <htmlurl name="Utrecht University"
 url="http://www.uu.nl/">, The Netherlands.
 
-It is Copyright (c) 2004 - 2010 by The DOMjudge Developers.
+It is Copyright (c) 2004 - 2011 by The DOMjudge Developers.
 
 DOMjudge, including its documentation, is free software; you can redistribute
 it and/or modify it under the terms of the <url name="GNU General Public License"
