@@ -110,8 +110,8 @@ Please supply team credentials below, or contact a staff member for assistance.
 </p>
 
 <form action="<?php echo $_SERVER['PHP_SELF'] ?>" method="post">
-<table>
 <input type="hidden" name="cmd" value="login" />
+<table>
 <tr><td><label for="login">Login:</label></td><td><input type="text" id="login" name="login" value="" size="15" maxlength="15" accesskey="l" /></td></tr>
 <tr><td><label for="passwd">Password:</label></td><td><input type="password" id="passwd" name="passwd" value="" size="15" maxlength="255" accesskey="p" /></td></tr>
 <tr><td colspan="2" align="center"><input type="submit" value="Login" /></td></tr>
