@@ -2,6 +2,10 @@ DOMjudge Programming Contest Judging System
 
 Version 3.1.4 - SVN
 -------------------
+ - Prevent empty lines in diff output due to DOS newlines.
+ - Move charset defines to common-config for judgedaemon.
+ - Fix HTML validation error.
+ - Fix static compilation with GHC.
 
 Version 3.1.3 - 21 December 2010
 --------------------------------
